--- a/api/static/styles/styles.css
+++ b/api/static/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Caveat:wght@400;500;600;700&family=Permanent+Marker&display=swap');
+
 :root {
   --white-color: #fff;
   --dark-color: #222;
@@ -18,7 +20,19 @@
 }
 
 body {
-  background: var(--dark-color);
+  background-color: #B0E2FF;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  mix-blend-mode: multiply;
+  z-index: -1;
 }
 
 section {
@@ -63,6 +77,7 @@ header .nav-bar {
   display: none;
 }
 .nav-bar .logo {
+  font-family: 'Abril Fatface', serif;
   color: var(--white-color);
   font-size: 1.8em;
   font-weight: 600;
@@ -72,6 +87,9 @@ header .nav-bar {
   text-shadow: var(--text-shadow);
 }
 .navigation .nav-items a {
+  font-family: 'Caveat', cursive;
+  font-size: 25px;
+  font-weight: 600;
   color: var(--white-color);
   font-size: 1em;
 
@@ -94,20 +112,10 @@ header .nav-bar {
 }
 
 .home {
-  /* position: relative; */
   min-height: 100vh;
 }
 
-.home img {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-  background-size: cover;
-  background-position: center;
-  z-index: -1;
-  opacity: 0.7;
-  filter: brightness(0.5);
-}
+
 
 .home .text-content {
   position: absolute;
@@ -119,18 +127,14 @@ header .nav-bar {
 
 .home .text-content .title {
   font-size: 4em;
-  font-weight: 700;
+  font-weight: 300;
   text-shadow: var(--text-shadow);
   margin-bottom: 20px;
   transition: 1s ease;
+  font-family: 'Permanent Marker', cursive;
 }
 
-.home .text-content .title span {
-  font-size: 0.3em;
-  font-weight: 300;
-}
-
-.home .text-content p {
+.home .text-content .desc .text p {
   max-width: 700px;
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
@@ -140,7 +144,31 @@ header .nav-bar {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   border-right: 1px solid rgba(255, 255, 255, 0.1);
   box-shadow: var(--box-shadow);
+  font-family: 'Caveat', cursive;
+  font-size: 24px;
+  margin: 20px 0;
 }
+
+.desc {
+  display: flex;
+  align-items: center;
+}
+
+.image-box {
+  
+  max-width: 600px; 
+  overflow: hidden;
+  margin-left: 20px; 
+}
+
+.image-box img {
+  width: 100%;
+  height: 300px;
+  display: block;
+  border-radius: 10px;
+  margin-bottom: 10px; 
+}
+
 
 .media-icons {
   z-index: 997;
@@ -160,7 +188,6 @@ header .nav-bar {
 
 .about {
   color: var(--white-color);
-  background: var(--section-bg-color);
   padding: 35px 200px;
   transition: 0.3s ease;
 }
@@ -194,6 +221,13 @@ header .nav-bar {
   .home .text-content {
     margin: 0 120px 0 50px;
   }
+  .desc{
+    flex-direction: column;
+  }
+  .image-box {
+    max-width: none;
+    margin-left: 0;
+  }
 }
 
 @media screen and (max-width: 785px) {
@@ -212,6 +246,11 @@ header .nav-bar {
 
   .home .text-content {
     margin: 0 70px 0 20px;
+    
+  }
+
+  .home .text-content .desc .text p{
+    font-size: 21px;
   }
 
   .home .title {
@@ -222,12 +261,24 @@ header .nav-bar {
     font-size: 0.35em;
   }
 
-  .text-content p {
+  .text-content .desc .text p {
     font-size: 0.9em;
   }
 }
 
+@media screen and (max-width: 660px) {
+  .about {
+    padding: 10px;
+  }
+}
+
 @media screen and (max-width: 560px) {
+  .home .text-content .desc .text p{
+    font-size: 17px;
+  }
+  .home .text-content .title{
+    font-size: 2.5em;
+  }
   .nav-menu-btn {
     display: block;
     color: var(--white-color);
@@ -258,12 +309,13 @@ header .nav-bar {
     align-items: center;
     visibility: hidden;
     opacity: 0;
-    transition: 0.3s ease;
+    transition: visibility 0s, opacity 0.3s ease;
   }
 
-  .navigation .active{
+  .navigation.active{
     visibility: visible;
     opacity: 1;
+    background-color: azure;
   }
 
   .navigation .nav-items {
@@ -281,7 +333,7 @@ header .nav-bar {
     transition: 0.3s ease;
   }
 
-  .navigation .active .nav-items{
+  .navigation.active .nav-items{
     transform: translateY(0);
   }
 
